[package]
name = "worker-rust"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
bytes = "1.5.0"
futures = "0.3.29"
tokio = { version = "1.34.0", features = ["io-util", "macros"] }
uuid = "1.6.1"
worker = "0.0.18"

[profile.release]
lto = true
strip = true
codegen-units = 1
